@@ -634,12 +634,14 @@ extensive hashing?;
 netCDF4 compound types?;
 <tt>ncks --xtn</tt> better extensive variable treatment;</li>
 <li><b>NCO 4.6.7</b>: (<i>In Progress, features in-progress or complete include</i>) 
-<tt>ncremap</tt> hints to ERWG;</li>
+<tt>ncremap</tt> 2D UGRID output;
+<tt>ncremap</tt> msk_src/dst conversion;
+<tt>ncremap</tt> src/dst_regional hints to ERWG;</li>
 <li><b>NCO 4.6.6</b>: 
 <tt>ncks --cdl</tt> prints units when <i>dbg_lvl</i>&nbsp;&ge;&nbsp;1;
 <tt>ncks --cdl</tt> prints braces for compound record variables;
+<tt>ncks</tt> outputs UGRID-format rectangular grids;
 <tt>ncremap/ncclimo no_cll_msr,no_frm_trm,no_ntv_tms,no_stg_grd</tt> switches;
-<tt>ncremap</tt> outputs UGRID-format rectangular grids;
 <tt>ncremap</tt> masks;</li>
 <li><b>NCO 4.6.5</b>: (<i>Current Stable Release</i>)
 <tt>ncks --cal</tt> prints human-legible ISO8601 dates;
