@@ -1,5 +1,9 @@
 2017-04-26  Charlie Zender  <zender@uci.edu>
 
+	* NCO 4.6.7-alpha03 release procedure:
+	cd ~/nco;git commit -a -m 'Version 4.6.7-alpha03 final changes';git push
+	git tag -a 4.6.7-alpha03 -m 'Version 4.6.7-alpha03 new features: msk_src,msk_dst,ugrid;';git push --tags
+
 	* Add ugrid_fl option to direct ncremap to infer UGRID from source input file
 
 	* Regridder can now infer masks from missing values of any variable
